fix some paths in notebooks

--- a/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
+++ b/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
@@ -123,7 +123,8 @@
     "import os\n",
     "os.environ[\"FSLDIR\"]=\"/cvmfs/neurodesk.ardc.edu.au/containers/fsl_6.0.5.1_20221016/fsl_6.0.5.1_20221016.simg/opt/fsl-6.0.5.1/\"\n",
     "os.environ[\"FSLOUTPUTTYPE\"]=\"NIFTI_GZ\"\n",
-    "os.environ[\"SINGULARITY_BINDPATH\"]=\"/data,/neurodesktop-storage,/tmp,/cvmfs\""
+    "os.environ[\"SINGULARITY_BINDPATH\"]=\"/data,/neurodesktop-storage,/tmp,/cvmfs\"\n",
+    "os.environ[\"APPTAINER_BINDPATH\"]=\"/data,/neurodesktop-storage,/tmp,/cvmfs\""
    ]
   },
   {
@@ -11063,10 +11064,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nipype_cope1 = '/neurodesktop-storage/Data/Flanker/output_level1/level1_results/11/results_dir/_subject_id_11/_level1estimate0/results/cope1.nii.gz'\n",
-    "nipype_cope2 = '/neurodesktop-storage/Data/Flanker/output_level1/level1_results/11/results_dir/_subject_id_11/_level1estimate0/results/cope2.nii.gz'\n",
-    "nipype_cope3 = '/neurodesktop-storage/Data/Flanker/output_level1/level1_results/11/results_dir/_subject_id_11/_level1estimate0/results/cope3.nii.gz'\n",
-    "nipype_cope4 = '/neurodesktop-storage/Data/Flanker/output_level1/level1_results/11/results_dir/_subject_id_11/_level1estimate0/results/cope4.nii.gz'"
+    "nipype_cope1 = '/neurodesktop-storage/Data/Flanker/output_level1/level1_results/01/results_dir/_subject_id_01/_level1estimate0/results/cope1.nii.gz'\n",
+    "nipype_cope2 = '/neurodesktop-storage/Data/Flanker/output_level1/level1_results/01/results_dir/_subject_id_01/_level1estimate0/results/cope2.nii.gz'\n",
+    "nipype_cope3 = '/neurodesktop-storage/Data/Flanker/output_level1/level1_results/01/results_dir/_subject_id_01/_level1estimate0/results/cope3.nii.gz'\n",
+    "nipype_cope4 = '/neurodesktop-storage/Data/Flanker/output_level1/level1_results/01/results_dir/_subject_id_01/_level1estimate0/results/cope4.nii.gz'"
    ]
   },
   {
