fix some paths in notebooks

--- a/structural_imaging/nipype_module_example.ipynb
+++ b/structural_imaging/nipype_module_example.ipynb
@@ -86,30 +86,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "4292c5cc-1458-4b9c-b386-3f112b3ef75c",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "4292c5cc-1458-4b9c-b386-3f112b3ef75c",
-    "outputId": "32346fdf-3726-48b2-ddf8-124635340a80"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/bash: bet: command not found\n"
-     ]
-    }
-   ],
-   "source": [
-    "!bet"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "35a53844-066e-4384-83b5-c8328622adea",
@@ -502,7 +478,7 @@
     "# load data\n",
     "brain_full = nib.load('./sub-01_ses-01_7T_T1w_defaced.nii').get_fdata()\n",
     "brain = nib.load('./sub-01_ses-01_7T_T1w_defaced_brain.nii.gz').get_fdata()\n",
-    "edges = nib.load('./sub-01_ses-01_7T_T1w_defaced_edges.nii.gz').get_fdata()"
+    "edges = nib.load('./sub-01_ses-01_7T_T1w_defaced_edges.nii').get_fdata()"
    ]
   },
   {
