--- a/structural_imaging/qsmxt_example.ipynb
+++ b/structural_imaging/qsmxt_example.ipynb
@@ -208,6 +208,7 @@
         "!tar xf osfstorage/dicoms-unsorted.tar\n",
         "!rm -rf osfstorage/\n",
         "!tree dicoms-unsorted | head\n",
+        "!chmod a+rw dicoms-unsorted/ -R\n",
         "!echo -e \"...\\nThere are `ls dicoms-unsorted | wc -l` unsorted DICOMs in ./dicoms-unsorted/\""
       ]
     },
