cd to test notebooks dir

--- a/structural_imaging/nipype_module_example.ipynb
+++ b/structural_imaging/nipype_module_example.ipynb
@@ -326,7 +326,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture\n",
     "!pip install nipype"
    ]
   },
@@ -474,11 +473,12 @@
     "from matplotlib import transforms\n",
     "from scipy import ndimage\n",
     "import numpy as np\n",
+    "from os.path import abspath\n",
     "\n",
     "# load data\n",
-    "brain_full = nib.load('./sub-01_ses-01_7T_T1w_defaced.nii').get_fdata()\n",
-    "brain = nib.load('./sub-01_ses-01_7T_T1w_defaced_brain.nii.gz').get_fdata()\n",
-    "edges = nib.load('./sub-01_ses-01_7T_T1w_defaced_edges.nii').get_fdata()"
+    "brain_full = nib.load(abspath('./sub-01_ses-01_7T_T1w_defaced.nii')).get_fdata()\n",
+    "brain = nib.load(abspath('./sub-01_ses-01_7T_T1w_defaced_brain.nii.gz')).get_fdata()\n",
+    "edges = nib.load(abspath('./sub-01_ses-01_7T_T1w_defaced_edges.nii')).get_fdata()"
    ]
   },
   {
