--- a/structural_imaging/sct_toolbox_example.ipynb
+++ b/structural_imaging/sct_toolbox_example.ipynb
@@ -154,6 +154,7 @@
         "import os\n",
         "from os.path import join\n",
         "from IPython.display import clear_output\n",
+        "from os.path import abspath\n",
         "\n",
         "base_path = os.getcwd()\n"
       ]
@@ -199,7 +200,7 @@
         "!sct_download_data -d sct_example_data -o ./sct_example_data\n",
         "\n",
         "# Go to MT folder\n",
-        "os.chdir('./sct_example_data/mt/')"
+        "os.chdir(abspath('./sct_example_data/mt/'))"
       ]
     },
     {
