set absolute path

--- a/structural_imaging/qsmxt_example.ipynb
+++ b/structural_imaging/qsmxt_example.ipynb
@@ -631,9 +631,9 @@
         }
       ],
       "source": [
-        "show_nii(glob(\"bids/sub-*/ses-*/anat/*mag*T2starw*nii*\")[0], title=\"Magnitude\", vmax=500)\n",
-        "show_nii(glob(\"bids/sub-*/ses-*/anat/*phase*T2starw*nii*\")[0], title=\"Phase\")\n",
-        "show_nii(glob(\"bids/sub-*/ses-*/anat/*T1w*nii*\")[0], title=\"T1-weighted\")"
+        "show_nii(glob(\"/bids/sub-*/ses-*/anat/*mag*T2starw*nii*\")[0], title=\"Magnitude\", vmax=500)\n",
+        "show_nii(glob(\"/bids/sub-*/ses-*/anat/*phase*T2starw*nii*\")[0], title=\"Phase\")\n",
+        "show_nii(glob(\"/bids/sub-*/ses-*/anat/*T1w*nii*\")[0], title=\"T1-weighted\")"
       ]
     },
     {
