use subsystem to run bash commands in python

--- a/structural_imaging/qsmxt_example.ipynb
+++ b/structural_imaging/qsmxt_example.ipynb
@@ -161,32 +161,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
-      "id": "80e4a8d2-d6bb-48e8-bdd7-36ac3d0c01c6",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "80e4a8d2-d6bb-48e8-bdd7-36ac3d0c01c6",
-        "outputId": "098cf81c-5e1d-4862-c09d-b05e759e63cf"
-      },
+      "execution_count": 13,
+      "id": "366aedd1",
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting osfclient\n",
-            "  Downloading osfclient-0.0.5-py2.py3-none-any.whl (39 kB)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from osfclient) (2.27.1)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from osfclient) (4.65.0)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.10/dist-packages (from osfclient) (1.16.0)\n",
-            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->osfclient) (1.26.15)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->osfclient) (2022.12.7)\n",
-            "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.10/dist-packages (from requests->osfclient) (2.0.12)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->osfclient) (3.4)\n",
-            "Installing collected packages: osfclient\n",
-            "Successfully installed osfclient-0.0.5\n",
+            "Requirement already satisfied: osfclient in /home/thuy/anaconda3/lib/python3.9/site-packages (0.0.5)\n",
+            "Requirement already satisfied: tqdm in /home/thuy/anaconda3/lib/python3.9/site-packages (from osfclient) (4.64.1)\n",
+            "Requirement already satisfied: requests in /home/thuy/anaconda3/lib/python3.9/site-packages (from osfclient) (2.28.1)\n",
+            "Requirement already satisfied: six in /home/thuy/anaconda3/lib/python3.9/site-packages (from osfclient) (1.16.0)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /home/thuy/anaconda3/lib/python3.9/site-packages (from requests->osfclient) (3.3)\n",
+            "Requirement already satisfied: charset-normalizer<3,>=2 in /home/thuy/anaconda3/lib/python3.9/site-packages (from requests->osfclient) (2.0.4)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/thuy/anaconda3/lib/python3.9/site-packages (from requests->osfclient) (1.26.11)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /home/thuy/anaconda3/lib/python3.9/site-packages (from requests->osfclient) (2022.9.14)\n",
             "dicoms-unsorted\n",
             "├── MR.1.100.dcm\n",
             "├── MR.1.101.dcm\n",
@@ -197,19 +187,25 @@
             "├── MR.1.106.dcm\n",
             "├── MR.1.107.dcm\n",
             "├── MR.1.108.dcm\n",
-            "...\n",
-            "There are 1216 unsorted DICOMs in ./dicoms-unsorted/\n"
+            "-e ...\n",
+            "There are 1216 unsorted DICOMs in ./dicoms-unsorted/\n",
+            "None\n"
           ]
         }
       ],
       "source": [
-        "!pip install osfclient\n",
-        "!osf -p ru43c clone . > /dev/null 2>&1\n",
-        "!tar xf osfstorage/dicoms-unsorted.tar\n",
-        "!rm -rf osfstorage/\n",
-        "!tree dicoms-unsorted | head\n",
-        "!chmod a+rw dicoms-unsorted/ -R\n",
-        "!echo -e \"...\\nThere are `ls dicoms-unsorted | wc -l` unsorted DICOMs in ./dicoms-unsorted/\""
+        "import subprocess\n",
+        "\n",
+        "command = '''pip install osfclient\n",
+        "osf -p ru43c clone . > /dev/null 2>&1\n",
+        "tar xf osfstorage/dicoms-unsorted.tar\n",
+        "rm -rf osfstorage/\n",
+        "tree dicoms-unsorted | head\n",
+        "echo -e \"...\\nThere are `ls dicoms-unsorted | wc -l` unsorted DICOMs in ./dicoms-unsorted/\"'''\n",
+        "\n",
+        "process = subprocess.run(command, shell=True, universal_newlines=True, check=True)\n",
+        "output, error = process.stdout, process.stderr\n",
+        "print(error)"
       ]
     },
     {
@@ -321,7 +317,9 @@
         }
       ],
       "source": [
-        "!run_0_dicomSort.py dicoms-unsorted dicoms-sorted"
+        "command = '''run_0_dicomSort.py dicoms-unsorted dicoms-sorted'''\n",
+        "process = subprocess.run(command, shell=True, universal_newlines=True, check=True)\n",
+        "output, error = process.stdout, process.stderr"
       ]
     },
     {
@@ -371,7 +369,9 @@
         }
       ],
       "source": [
-        "!tree dicoms-sorted -L 3"
+        "command = '''tree dicoms-sorted -L 3'''\n",
+        "process = subprocess.run(command, shell=True, universal_newlines=True, check=True)\n",
+        "output, error = process.stdout, process.stderr"
       ]
     },
     {
@@ -454,9 +454,11 @@
         }
       ],
       "source": [
-        "!run_1_dicomConvert.py dicoms-sorted bids \\\n",
+        "command = '''run_1_dicomConvert.py dicoms-sorted bids \\\n",
         "    --t1w_protocol_patterns \"*mp2rage*\" \\\n",
-        "    --auto_yes"
+        "    --auto_yes'''\n",
+        "process = subprocess.run(command, shell=True, universal_newlines=True, check=True)\n",
+        "output, error = process.stdout, process.stderr"
       ]
     },
     {
@@ -1782,7 +1784,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.4"
+      "version": "3.9.13"
     }
   },
   "nbformat": 4,
