use % instead of !

--- a/structural_imaging/qsmxt_example.ipynb
+++ b/structural_imaging/qsmxt_example.ipynb
@@ -697,7 +697,7 @@
         }
       ],
       "source": [
-        "!run_2_qsm.py --list_premades"
+        "%run_2_qsm.py --list_premades"
       ]
     },
     {
@@ -1072,7 +1072,7 @@
         }
       ],
       "source": [
-        "!run_2_qsm.py bids qsm --premade fast --auto_yes"
+        "%run_2_qsm.py bids qsm --premade fast --auto_yes"
       ]
     },
     {
@@ -1128,7 +1128,7 @@
         }
       ],
       "source": [
-        "!tree qsm/ -L 1 --dirsfirst"
+        "%tree qsm/ -L 1 --dirsfirst"
       ]
     },
     {
@@ -1194,7 +1194,7 @@
         }
       ],
       "source": [
-        "!cat qsm/references.txt"
+        "%cat qsm/references.txt"
       ]
     },
     {
@@ -1315,7 +1315,7 @@
         }
       ],
       "source": [
-        "!run_3_segment.py bids segmentations"
+        "%run_3_segment.py bids segmentations"
       ]
     },
     {
@@ -1368,7 +1368,7 @@
         }
       ],
       "source": [
-        "!tree segmentations -L 1 --dirsfirst"
+        "%tree segmentations -L 1 --dirsfirst"
       ]
     },
     {
@@ -1410,7 +1410,7 @@
         }
       ],
       "source": [
-        "!tree segmentations/*segmentations"
+        "%tree segmentations/*segmentations"
       ]
     },
     {
@@ -1445,7 +1445,7 @@
         }
       ],
       "source": [
-        "!cat segmentations/details_and_citations.txt"
+        "%cat segmentations/details_and_citations.txt"
       ]
     },
     {
@@ -1496,7 +1496,7 @@
         }
       ],
       "source": [
-        "!run_5_analysis.py --segmentations segmentations/qsm_segmentations/* --qsm_files qsm/qsm_final/*/*.nii* --output_dir analysis --labels_file /opt/QSMxT/aseg_labels.csv"
+        "%run_5_analysis.py --segmentations segmentations/qsm_segmentations/* --qsm_files qsm/qsm_final/*/*.nii* --output_dir analysis --labels_file /opt/QSMxT/aseg_labels.csv"
       ]
     },
     {
@@ -1533,8 +1533,8 @@
         }
       ],
       "source": [
-        "!head analysis/sub-1*csv -n 1\n",
-        "!cat analysis/*.csv | grep Left-Putamen"
+        "%head analysis/sub-1*csv -n 1\n",
+        "%cat analysis/*.csv | grep Left-Putamen"
       ]
     },
     {
@@ -1594,7 +1594,7 @@
         }
       ],
       "source": [
-        "!pip install seaborn"
+        "%pip install seaborn"
       ]
     },
     {
