run action for matrix

--- a/functional_imaging/fmriprep_example.ipynb
+++ b/functional_imaging/fmriprep_example.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -12,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -19,6 +21,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "JkhI6CLRoPU_"
@@ -46,13 +49,13 @@
     "\n",
     "if IN_COLAB:\n",
     "  os.environ[\"LD_PRELOAD\"] = \"\";\n",
-    "  os.environ[\"APPTAINER_BINDPATH\"] = \"/content\"\n",
+    "  os.environ[\"APPTAINER_BINDPATH\"] = \"/content,/neurodesktop-storage,/tmp,/cvmfs\"\n",
     "  os.environ[\"MPLCONFIGDIR\"] = \"/content/matplotlib-mpldir\"\n",
     "  os.environ[\"LMOD_CMD\"] = \"/usr/share/lmod/lmod/libexec/lmod\"\n",
     "\n",
-    "  !curl -J -O https://raw.githubusercontent.com/NeuroDesk/neurocommand/main/googlecolab_setup.sh\n",
-    "  !chmod +x googlecolab_setup.sh\n",
-    "  !./googlecolab_setup.sh\n",
+    "  %curl -J -O https://raw.githubusercontent.com/NeuroDesk/neurocommand/main/googlecolab_setup.sh\n",
+    "  %chmod +x googlecolab_setup.sh\n",
+    "  %./googlecolab_setup.sh\n",
     "\n",
     "  os.environ[\"MODULEPATH\"] = ':'.join(map(str, list(map(lambda x: os.path.join(os.path.abspath('/cvmfs/neurodesk.ardc.edu.au/neurodesk-modules/'), x),os.listdir('/cvmfs/neurodesk.ardc.edu.au/neurodesk-modules/')))))\n"
    ]
@@ -75,11 +78,12 @@
    ],
    "source": [
     "# Output CPU information:\n",
-    "!cat /proc/cpuinfo | grep 'vendor' | uniq\n",
-    "!cat /proc/cpuinfo | grep 'model name' | uniq"
+    "%cat /proc/cpuinfo | grep 'vendor' | uniq\n",
+    "%cat /proc/cpuinfo | grep 'model name' | uniq"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Emcl6_v2oS8w"
@@ -126,12 +130,11 @@
    },
    "outputs": [],
    "source": [
-    "%%bash\n",
     "# Request a freesurfer license and store it in your homedirectory. This is just an exampe - please replace with your license id:\n",
-    "echo \"Steffen.Bollmann@cai.uq.edu.au\" > ~/.license\n",
-    "echo \"21029\" >> ~/.license\n",
-    "echo \"*Cqyn12sqTCxo\" >> ~/.license\n",
-    "echo \"FSxgcvGkNR59Y\" >> ~/.license"
+    "%echo \"Steffen.Bollmann@cai.uq.edu.au\" > ~/.license\n",
+    "%echo \"21029\" >> ~/.license\n",
+    "%echo \"*Cqyn12sqTCxo\" >> ~/.license\n",
+    "%echo \"FSxgcvGkNR59Y\" >> ~/.license"
    ]
   },
   {
@@ -178,10 +181,9 @@
     }
    ],
    "source": [
-    "%%bash\n",
     "# download data\n",
-    "datalad install https://github.com/OpenNeuroDatasets/ds000102.git\n",
-    "cd ds000102 && datalad get sub-08"
+    "%datalad install https://github.com/OpenNeuroDatasets/ds000102.git\n",
+    "%cd ds000102 && datalad get sub-08"
    ]
   },
   {
@@ -7534,11 +7536,10 @@
     }
    ],
    "source": [
-    "%%bash\n",
-    "export ITK_GLOBAL_DEFAULT_NUMBER_OF_THREADS=2 # specify the number of threads you want to use\n",
-    "export MPLCONFIGDIR=~/matplotlib-mpldir\n",
+    "%export ITK_GLOBAL_DEFAULT_NUMBER_OF_THREADS=2 # specify the number of threads you want to use\n",
+    "%export MPLCONFIGDIR=~/matplotlib-mpldir\n",
     "\n",
-    "fmriprep ds000102/ content/ participant --fs-license-file ~/.license --output-spaces T1w MNI152NLin2009cAsym fsaverage fsnative --participant-label 08 --nprocs $ITK_GLOBAL_DEFAULT_NUMBER_OF_THREADS --mem 10000 --skip_bids_validation -v "
+    "%fmriprep ds000102/ content/ participant --fs-license-file ~/.license --output-spaces T1w MNI152NLin2009cAsym fsaverage fsnative --participant-label 08 --nprocs $ITK_GLOBAL_DEFAULT_NUMBER_OF_THREADS --mem 10000 --skip_bids_validation -v "
    ]
   }
  ],
