--- a/structural_imaging/nipype_module_example.ipynb
+++ b/structural_imaging/nipype_module_example.ipynb
@@ -46,13 +46,14 @@
    },
    "outputs": [],
    "source": [
+    "%%capture\n",
     "import os\n",
     "import sys\n",
     "IN_COLAB = 'google.colab' in sys.modules\n",
     "\n",
     "if IN_COLAB:\n",
     "  os.environ[\"LD_PRELOAD\"] = \"\";\n",
-    "  os.environ[\"APPTAINER_BINDPATH\"] = \"/content\"\n",
+    "  os.environ[\"APPTAINER_BINDPATH\"] = \"/content,/neurodesktop-storage,/tmp,/cvmfs\"\n",
     "  os.environ[\"MPLCONFIGDIR\"] = \"/content/matplotlib-mpldir\"\n",
     "  os.environ[\"LMOD_CMD\"] = \"/usr/share/lmod/lmod/libexec/lmod\"\n",
     "\n",
