--- a/structural_imaging/sct_toolbox_example.ipynb
+++ b/structural_imaging/sct_toolbox_example.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "if IN_COLAB:\n",
     "  os.environ[\"LD_PRELOAD\"] = \"\";\n",
-    "  os.environ[\"APPTAINER_BINDPATH\"] = \"/content\"\n",
+    "  os.environ[\"APPTAINER_BINDPATH\"] = \"/content,/neurodesktop-storage,/tmp,/cvmfs\"\n",
     "  os.environ[\"MPLCONFIGDIR\"] = \"/content/matplotlib-mpldir\"\n",
     "  os.environ[\"LMOD_CMD\"] = \"/usr/share/lmod/lmod/libexec/lmod\"\n",
     "\n",
