remove /data for APPTAINER_BINDPATH

--- a/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
+++ b/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
@@ -147,7 +147,7 @@
     "os.environ[\"FSLDIR\"]=\"/cvmfs/neurodesk.ardc.edu.au/containers/fsl_6.0.5.1_20221016/fsl_6.0.5.1_20221016.simg/opt/fsl-6.0.5.1/\"\n",
     "os.environ[\"FSLOUTPUTTYPE\"]=\"NIFTI_GZ\"\n",
     "os.environ[\"SINGULARITY_BINDPATH\"]=\"/data,/neurodesktop-storage,/tmp,/cvmfs\"\n",
-    "os.environ[\"APPTAINER_BINDPATH\"]=\"/data,/neurodesktop-storage,/tmp,/cvmfs\""
+    "os.environ[\"APPTAINER_BINDPATH\"]=\"/neurodesktop-storage,/tmp,/cvmfs\""
    ]
   },
   {
@@ -250,7 +250,7 @@
     "PATTERN = \"sub-0*\"\n",
     "# Check if the directory exists, otherwise create it\n",
     "if not os.path.exists(base_dir):\n",
-    "    %mkdir -p $base_dir\n",
+    "    os.makedirs(base_dir, 0o777)\n",
     "%cd $base_dir && datalad install https://github.com/OpenNeuroDatasets/ds000102.git && cd $data_dir_first && datalad get $PATTERN && chmod a+rw $base_dir -R"
    ]
   },
