fix permission denied on os.makedirs

--- a/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
+++ b/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
@@ -252,7 +252,7 @@
     "if not os.path.exists(base_dir):\n",
     "    try:\n",
     "        original_umask = os.umask(0)\n",
-    "        os.makedirs(base_dir, 0777)\n",
+    "        os.makedirs(base_dir, 0o777)\n",
     "    finally:\n",
     "        os.umask(original_umask)\n",
     "%cd $base_dir && datalad install https://github.com/OpenNeuroDatasets/ds000102.git && cd $data_dir_first && datalad get $PATTERN && chmod a+rw $base_dir -R"
