--- a/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
+++ b/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
@@ -250,11 +250,8 @@
     "PATTERN = \"sub-0*\"\n",
     "# Check if the directory exists, otherwise create it\n",
     "if not os.path.exists(base_dir):\n",
-    "    try:\n",
-    "        original_umask = os.umask(0)\n",
-    "        os.makedirs(base_dir, 0o777)\n",
-    "    finally:\n",
-    "        os.umask(original_umask)\n",
+    "    %chmod a+rw /neurodesktop-storage -R\n",
+    "    %mkdir $base_dir\n",
     "%cd $base_dir && datalad install https://github.com/OpenNeuroDatasets/ds000102.git && cd $data_dir_first && datalad get $PATTERN && chmod a+rw $base_dir -R"
    ]
   },
