fix permission denied on os.makedirs

--- a/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
+++ b/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
@@ -250,9 +250,8 @@
     "PATTERN = \"sub-0*\"\n",
     "# Check if the directory exists, otherwise create it\n",
     "if not os.path.exists(base_dir):\n",
-    "    %chmod a+rw /neurodesktop-storage -R\n",
-    "    %mkdir $base_dir\n",
-    "%cd $base_dir && datalad install https://github.com/OpenNeuroDatasets/ds000102.git && cd $data_dir_first && datalad get $PATTERN && chmod a+rw $base_dir -R"
+    "    %mkdir -p $base_dir\n",
+    "%cd $base_dir && datalad install https://github.com/OpenNeuroDatasets/ds000102.git && cd $data_dir_first && datalad get $PATTERN && chmod a+rwx $base_dir -R"
    ]
   },
   {
