--- a/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
+++ b/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
@@ -232,10 +232,10 @@
    "source": [
     "%%capture\n",
     "# Input: Set the BIDS path\n",
-    "base_dir = '/neurodesktop-storage/Data/Flanker'\n",
-    "data_dir_first = '/neurodesktop-storage/Data/Flanker/ds000102'\n",
+    "base_dir = 'Data/Flanker'\n",
+    "data_dir_first = 'Data/Flanker/ds000102'\n",
     "# Output: Set path where nipype will store stepwise results\n",
-    "exp_dir_first = '/neurodesktop-storage/Data/Flanker/output_level1'\n",
+    "exp_dir_first = 'Data/Flanker/output_level1'\n",
     "\n",
     "# Input: Set path of first level outputs\n",
     "data_dir_second = '/neurodesktop-storage/Data/Flanker/output_level1/level1_results/'\n",
