fix permission denied on os.makedirs

--- a/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
+++ b/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
@@ -232,10 +232,10 @@
    "source": [
     "%%capture\n",
     "# Input: Set the BIDS path\n",
-    "base_dir = 'Data/Flanker'\n",
-    "data_dir_first = 'Data/Flanker/ds000102'\n",
+    "base_dir = '/neurodesktop-storage/Data/Flanker'\n",
+    "data_dir_first = '/neurodesktop-storage/Data/Flanker/ds000102'\n",
     "# Output: Set path where nipype will store stepwise results\n",
-    "exp_dir_first = 'Data/Flanker/output_level1'\n",
+    "exp_dir_first = '/neurodesktop-storage/Data/Flanker/output_level1'\n",
     "\n",
     "# Input: Set path of first level outputs\n",
     "data_dir_second = '/neurodesktop-storage/Data/Flanker/output_level1/level1_results/'\n",
@@ -250,7 +250,8 @@
     "PATTERN = \"sub-0*\"\n",
     "# Check if the directory exists, otherwise create it\n",
     "if not os.path.exists(base_dir):\n",
-    "    %mkdir -p $base_dir\n",
+    "    os.makedirs(base_dir, 0o777)\n",
+    "\n",
     "%cd $base_dir && datalad install https://github.com/OpenNeuroDatasets/ds000102.git && cd $data_dir_first && datalad get $PATTERN && chmod a+rwx $base_dir -R"
    ]
   },
