--- a/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
+++ b/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
@@ -232,20 +232,21 @@
    "source": [
     "%%capture\n",
     "# Input: Set the BIDS path\n",
-    "base_dir = '/neurodesktop-storage/Data/Flanker'\n",
-    "data_dir_first = '/neurodesktop-storage/Data/Flanker/ds000102'\n",
+    "\n",
+    "base_dir = os.path.join(os.getcwd(), 'Flanker')\n",
+    "data_dir_first = os.path.join(os.getcwd(), 'Flanker/ds000102')\n",
     "# Output: Set path where nipype will store stepwise results\n",
-    "exp_dir_first = '/neurodesktop-storage/Data/Flanker/output_level1'\n",
+    "exp_dir_first = os.path.join(os.getcwd(), 'Flanker/output_level1')\n",
     "\n",
     "# Input: Set path of first level outputs\n",
-    "data_dir_second = '/neurodesktop-storage/Data/Flanker/output_level1/level1_results/'\n",
+    "data_dir_second = os.path.join(os.getcwd(), 'Flanker/output_level1/level1_results/')\n",
     "# Output: Set path where nipype will store stepwise results\n",
-    "exp_dir_second = '/neurodesktop-storage/Data/Flanker/output_level2/'\n",
+    "exp_dir_second = os.path.join(os.getcwd(), 'Flanker/output_level2/')\n",
     "\n",
     "# Input: Set path of second level outputs\n",
-    "data_dir_third = '/neurodesktop-storage/Data/Flanker/output_level2/level2_results/'\n",
+    "data_dir_third = os.path.join(os.getcwd(), 'Flanker/output_level2/level2_results/')\n",
     "# Output: Set path where nipype will store stepwise results\n",
-    "exp_dir_third = '/neurodesktop-storage/Data/Flanker/output_level3/'\n",
+    "exp_dir_third = os.path.join(os.getcwd(), 'Flanker/output_level3/')\n",
     "\n",
     "PATTERN = \"sub-0*\"\n",
     "# Check if the directory exists, otherwise create it\n",
