fix permission denied on os.makedirs

--- a/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
+++ b/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a8005f06",
    "metadata": {
     "scrolled": true,
@@ -230,7 +230,7 @@
    },
    "outputs": [],
    "source": [
-    "%%capture\n",
+    "import subprocess\n",
     "# Input: Set the BIDS path\n",
     "\n",
     "base_dir = os.path.join(os.getcwd(), 'Flanker')\n",
@@ -253,7 +253,11 @@
     "if not os.path.exists(base_dir):\n",
     "    os.makedirs(base_dir, 0o777)\n",
     "\n",
-    "%cd $base_dir && datalad install https://github.com/OpenNeuroDatasets/ds000102.git && cd $data_dir_first && datalad get $PATTERN && chmod a+rwx $base_dir -R"
+    "command = '''cd $base_dir && datalad install https://github.com/OpenNeuroDatasets/ds000102.git && cd $data_dir_first && datalad get $PATTERN && chmod a+rwx $base_dir -R'''\n",
+    "\n",
+    "process = subprocess.run(command, shell=True, universal_newlines=True, check=True)\n",
+    "output, error = process.stdout, process.stderr\n",
+    "print(output,error)"
    ]
   },
   {
