fix permission denied on os.makedirs

--- a/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
+++ b/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
@@ -62,6 +62,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ac85fac0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "def sys_cmd(cmd, print_output=True, print_command=True):\n",
+    "    if print_command:\n",
+    "        print(cmd)\n",
+    "    \n",
+    "    process = subprocess.run(cmd, shell=True, check=True)\n",
+    "    output, error = process.stdout, process.stderr\n",
+    "    \n",
+    "    if print_output:\n",
+    "        print(output,error)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "0bc44d6c-c479-4071-bf4b-8e67c9700786",
    "metadata": {
@@ -230,7 +249,7 @@
    },
    "outputs": [],
    "source": [
-    "import subprocess\n",
+    "\n",
     "# Input: Set the BIDS path\n",
     "\n",
     "base_dir = os.path.join(os.getcwd(), 'Flanker')\n",
@@ -251,13 +270,10 @@
     "PATTERN = \"sub-0*\"\n",
     "# Check if the directory exists, otherwise create it\n",
     "if not os.path.exists(base_dir):\n",
-    "    os.makedirs(base_dir, 0o777)\n",
+    "    sys_cmd('''mkdir -p $base_dir''')\n",
     "\n",
     "command = '''cd $base_dir && datalad install https://github.com/OpenNeuroDatasets/ds000102.git && cd $data_dir_first && datalad get $PATTERN && chmod a+rwx $base_dir -R'''\n",
-    "\n",
-    "process = subprocess.run(command, shell=True, universal_newlines=True, check=True)\n",
-    "output, error = process.stdout, process.stderr\n",
-    "print(output,error)"
+    "sys_cmd(command)\n"
    ]
   },
   {
