--- a/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
+++ b/functional_imaging/nipype_fsl_all_levels_flanker.ipynb
@@ -251,27 +251,28 @@
     "\n",
     "# Input: Set the BIDS path\n",
     "\n",
-    "base_dir = os.path.join(os.getcwd(), 'Flanker')\n",
-    "data_dir_first = os.path.join(os.getcwd(), 'Flanker/ds000102')\n",
+    "# base_dir = os.path.join(os.getcwd(), 'Flanker')\n",
+    "data_dir_first = os.path.join(os.getcwd(), 'ds000102')\n",
     "# Output: Set path where nipype will store stepwise results\n",
-    "exp_dir_first = os.path.join(os.getcwd(), 'Flanker/output_level1')\n",
+    "exp_dir_first = os.path.join(os.getcwd(), 'output_level1')\n",
     "\n",
     "# Input: Set path of first level outputs\n",
-    "data_dir_second = os.path.join(os.getcwd(), 'Flanker/output_level1/level1_results/')\n",
+    "data_dir_second = os.path.join(os.getcwd(), 'output_level1/level1_results/')\n",
     "# Output: Set path where nipype will store stepwise results\n",
-    "exp_dir_second = os.path.join(os.getcwd(), 'Flanker/output_level2/')\n",
+    "exp_dir_second = os.path.join(os.getcwd(), 'output_level2/')\n",
     "\n",
     "# Input: Set path of second level outputs\n",
-    "data_dir_third = os.path.join(os.getcwd(), 'Flanker/output_level2/level2_results/')\n",
+    "data_dir_third = os.path.join(os.getcwd(), 'output_level2/level2_results/')\n",
     "# Output: Set path where nipype will store stepwise results\n",
-    "exp_dir_third = os.path.join(os.getcwd(), 'Flanker/output_level3/')\n",
+    "exp_dir_third = os.path.join(os.getcwd(), 'output_level3/')\n",
     "\n",
     "PATTERN = \"sub-0*\"\n",
     "# Check if the directory exists, otherwise create it\n",
-    "if not os.path.exists(base_dir):\n",
-    "    os.makedirs(base_dir, 0o777)\n",
+    "# if not os.path.exists(base_dir):\n",
+    "#     os.makedirs(base_dir, 0o777)\n",
     "\n",
-    "%cd $base_dir && datalad install https://github.com/OpenNeuroDatasets/ds000102.git && cd $data_dir_first && datalad get $PATTERN && chmod a+rwx $base_dir -R"
+    "%datalad install https://github.com/OpenNeuroDatasets/ds000102.git\n",
+    "%cd ds000102 && datalad get $PATTERN"
    ]
   },
   {
