--- a/books/functional_imaging/process_five_echo_dataset.ipynb
+++ b/books/functional_imaging/process_five_echo_dataset.ipynb
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "! pip install tedana=25.0.1"
+    "! pip install tedana==25.0.1"
    ]
   },
   {
