added instructions for parameter cell and made bet call easier

--- a/books/workflows/papermill-slurm-submission-example.ipynb
+++ b/books/workflows/papermill-slurm-submission-example.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -82,17 +82,34 @@
      "data": {
       "text/plain": [
        "['julia/1.10.4',\n",
+       " '<H>',\n",
+       " '<H>',\n",
+       " '<H>',\n",
+       " '<H>',\n",
+       " '<H>',\n",
+       " '<H>',\n",
+       " '<H>',\n",
+       " '<H>',\n",
+       " '<H>',\n",
+       " '<H>',\n",
+       " '<H>',\n",
        " 'openssl/1.1',\n",
        " 'python/3.10.4-gcccore-11.3.0',\n",
+       " '<H>',\n",
+       " '<H>',\n",
+       " '<H>',\n",
+       " '<H>',\n",
+       " '<H>',\n",
        " 'libxslt/1.1.34-gcccore-11.3.0',\n",
        " 'lxml/4.9.1-gcccore-11.3.0',\n",
        " 'beautifulsoup/4.10.0-gcccore-11.3.0',\n",
+       " '<H>',\n",
        " 'jupyter-server/1.21.0-gcccore-11.3.0',\n",
        " 'jupyterlab/3.5.0-gcccore-11.3.0',\n",
        " 'fsl/6.0.4']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,23 +156,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
+    "#This cell needs to be tagged as \"parameters\" and it will be replaced at runtime - this can be done by clicking the little cog-wheels in the top right and then tagging the cell\n",
     "subject_id='01'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mp2rage-01.nii mask-sub-01.nii -R\n"
+     ]
+    }
+   ],
    "source": [
-    "import subprocess\n",
-    "result = subprocess.run(['bet', 'mp2rage-'+subject_id+'.nii', \n",
-    "                        'mask-sub-'+subject_id+'.nii', '-R'], \n",
-    "                       capture_output=True, text=True)"
+    "!bet mp2rage-{subject_id}.nii mask-sub-{subject_id}.nii -R"
    ]
   },
   {
@@ -172,7 +199,7 @@
    "outputs": [],
    "source": [
     "# Save Notebook and Run this on the terminal to test\n",
-    "# !papermill test-analysis.ipynb papermill_output.ipynb --parameters_raw subject_id 02"
+    "# papermill papermill-slurm-submission-example.ipynb papermill_output.ipynb --parameters_raw subject_id 02"
    ]
   },
   {
@@ -181,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create sbat file and make sure to replace account string and and execution times and modules loaded:"
+    "# create sbat file with the following content and make sure to replace account string and and execution times and modules loaded:"
    ]
   },
   {
@@ -226,7 +253,7 @@
     "echo \"Started at: $(date)\"\n",
     "\n",
     "# Run papermill for this subject\n",
-    "papermill test-analysis.ipynb \\\n",
+    "papermill papermill-slurm-submission-example.ipynb \\\n",
     "    papermill_outputs/papermill_output_sub-${subject_id}.ipynb \\\n",
     "    --parameters_raw subject_id ${subject_id}\n",
     "\n",
@@ -239,6 +266,16 @@
     "fi\n",
     "\n",
     "echo \"Completed subject $subject_id at $(date)\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#then run the sbat file:\n",
+    "#sbatch papermill.sbat"
    ]
   }
  ],
