add description for opening html report

--- a/books/functional_imaging/process_five_echo_dataset.ipynb
+++ b/books/functional_imaging/process_five_echo_dataset.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "- Kundu, P., Inati, S. J., Evans, J. W., Luh, W. M., & Bandettini, P. A. (2011). [Differentiating BOLD and non-BOLD signals in fMRI time series using multi-echo EPI](https://www.sciencedirect.com/science/article/abs/pii/S1053811911014303?via%3Dihub). NeuroImage, 60, 1759-1770.\n",
     "\n",
-    "- Kundu, P., Brenowitz, N. D., Voon, V., Worbe, Y., Vértes, P. E., Inati, S. J., Saad, Z. S., Bandettini, P. A., & Bullmore, E. T. (2013). [Integrated strategy for improving functional connectivity mapping using multiecho fMRI.](https://www.pnas.org/doi/full/10.1073/pnas.1301725110)Proceedings of the National Academy of Sciences, 110, 16187-16192.\n",
+    "- Kundu, P., Brenowitz, N. D., Voon, V., Worbe, Y., Vértes, P. E., Inati, S. J., Saad, Z. S., Bandettini, P. A., & Bullmore, E. T. (2013). [Integrated strategy for improving functional connectivity mapping using multiecho fMRI.](https://www.pnas.org/doi/full/10.1073/pnas.1301725110) Proceedings of the National Academy of Sciences, 110, 16187-16192.\n",
     "\n",
     "#### Educational resources\n",
     "- [tedana documentation](https://tedana.readthedocs.io/en/stable/index.html#)\n",
@@ -417,7 +417,10 @@
    },
    "source": [
     "## Tedana report of 5 echo data\n",
-    "[Here](https://me-ica.github.io/ohbm-2023-multiecho/tedana/tedana_results_minimal_five-echo/tedana_report.html) you'll find an interactive tedana report. Below, we visualize selected components from the generated tedana report."
+    "\n",
+    "You can explore an example of an interactive tedana report [here](https://me-ica.github.io/ohbm-2023-multiecho/tedana/tedana_results_minimal_five-echo/tedana_report.html).\n",
+    "\n",
+    "The tedana report for the current dataset was generated at the following location:"
    ]
   },
   {
@@ -443,6 +446,15 @@
     "# this is the path of the tedana report\n",
     "url = str(os.path.abspath(dset_dir5_out + '/tedana_report.html'))\n",
     "print(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To properly view the interactive *tedana html report* with all figures displayed correctly, right-click the file at the path shown above and select **Open in New Browser Tab**.\n",
+    "\n",
+    "Below, selected components from the generated tedana report are visualized."
    ]
   },
   {
@@ -4704,9 +4716,16 @@
     }
    ],
    "source": [
-    "#here is the path to the report\n",
+    "# Here is the path to the second TEDANA report\n",
     "url = str(os.path.abspath(dset_dir5_extern_out + '/tedana_report.html'))\n",
     "print(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To view this report with all figures displayed properly, right-click the file path and choose **Open in New Browser Tab**."
    ]
   },
   {
