fix scroll output

--- a/books/functional_imaging/AFNI_preprocessing_plus_glm_group.ipynb
+++ b/books/functional_imaging/AFNI_preprocessing_plus_glm_group.ipynb
@@ -10,7 +10,7 @@
     "tags": []
    },
    "source": [
-    "# AFNI Preprocessing & Group GLM\n",
+    "# AFNI Preprocessing & Group Analysis\n",
     "\n",
     "\n",
     "**Author**: Monika Doerig\n",
@@ -176,7 +176,7 @@
      "slide_type": ""
     },
     "tags": [
-     "scroll-ouput"
+     "scroll-output"
     ],
     "vscode": {
      "languageId": "plaintext"
@@ -572,7 +572,7 @@
      "slide_type": ""
     },
     "tags": [
-     "scroll-ouput"
+     "scroll-output"
     ]
    },
    "outputs": [
@@ -935,7 +935,7 @@
      "slide_type": ""
     },
     "tags": [
-     "scroll-ouput"
+     "scroll-output"
     ]
    },
    "outputs": [
@@ -1157,7 +1157,7 @@
      "slide_type": ""
     },
     "tags": [
-     "scroll-ouput"
+     "scroll-output"
     ]
    },
    "outputs": [
@@ -25843,7 +25843,7 @@
      "slide_type": ""
     },
     "tags": [
-     "scroll-ouput"
+     "scroll-output"
     ]
    },
    "outputs": [
@@ -25961,7 +25961,7 @@
      "slide_type": ""
     },
     "tags": [
-     "scroll-ouput"
+     "scroll-output"
     ]
    },
    "outputs": [
@@ -26094,7 +26094,7 @@
      "slide_type": ""
     },
     "tags": [
-     "scroll-ouput"
+     "scroll-output"
     ]
    },
    "outputs": [
@@ -26278,7 +26278,7 @@
      "slide_type": ""
     },
     "tags": [
-     "scroll-ouput"
+     "scroll-output"
     ]
    },
    "outputs": [
@@ -26323,7 +26323,13 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -26457,7 +26463,7 @@
      "slide_type": ""
     },
     "tags": [
-     "scroll-ouput"
+     "scroll-output"
     ]
    },
    "outputs": [
@@ -28847,7 +28853,7 @@
      "slide_type": ""
     },
     "tags": [
-     "scroll-ouput"
+     "scroll-output"
     ]
    },
    "outputs": [
