Fix broken link in TBSS documentation

--- a/books/diffusion_imaging/Diffusion_TBSS_Demo.ipynb
+++ b/books/diffusion_imaging/Diffusion_TBSS_Demo.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "__TBSS:__ \n",
     "- S.M. Smith, M. Jenkinson, H. Johansen-Berg, D. Rueckert, T.E. Nichols, C.E. Mackay, K.E. Watkins, O. Ciccarelli, M.Z. Cader, P.M. Matthews, and T.E.J. Behrens. Tract-based spatial statistics: Voxelwise analysis of multi-subject diffusion data. NeuroImage, 31:1487-1505, 2006.\n",
-    "- For more details: [https://ftp.nmr.mgh.harvard.edu/pub/dist/freesurfer/tutorial_packages/centos6/fsl_507/doc/wiki/TBSS.html](https://ftp.nmr.mgh.harvard.edu/pub/dist/freesurfer/tutorial_packages/centos6/fsl_507/doc/wiki/TBSS.htm)"
+    "- For more details: [https://ftp.nmr.mgh.harvard.edu/pub/dist/freesurfer/tutorial_packages_centos6/centos6/fsl_507/doc/wiki/TBSS.html](https://ftp.nmr.mgh.harvard.edu/pub/dist/freesurfer/tutorial_packages_centos6/centos6/fsl_507/doc/wiki/TBSS.html)"
    ]
   },
   {
