add pip install python libraries

--- a/books/spectroscopy/osprey.ipynb
+++ b/books/spectroscopy/osprey.ipynb
@@ -188,6 +188,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1dd026e9-4209-4167-95f5-b978850f72dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "!pip install nibabel numpy pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "055d1ece-e1da-4ac9-8475-1b09100fcabd",
    "metadata": {},
