check module load

--- a/books/spectroscopy/osprey.ipynb
+++ b/books/spectroscopy/osprey.ipynb
@@ -190,7 +190,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1dd026e9-4209-4167-95f5-b978850f72dc",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -238,7 +244,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "215f9e2b-ee69-47e9-a302-a3d57118c1a3",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "scroll-output"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
